--- a/liquidwar6/doc/gfx-doxygen.texi
+++ b/liquidwar6/doc/gfx-doxygen.texi
@@ -1,11 +1,12 @@
 
   
-@deftp struct lw6gfx_backend_s
+@deftp {Struct} {lw6gfx_backend_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6gfx_backend_s {dl_handle}
+@defcv {member} {lw6gfx_backend_s} {dl_handle}
 @example
 lw6dyn_dl_handle_t* lw6gfx_backend_s::dl_handle
 @end example
@@ -14,7 +15,7 @@ lw6dyn_dl_handle_t* lw6gfx_backend_s::dl_handle
         
 @end defcv
 
-@defcv {member} lw6gfx_backend_s {gfx_context}
+@defcv {member} {lw6gfx_backend_s} {gfx_context}
 @example
 void* lw6gfx_backend_s::gfx_context
 @end example
@@ -23,7 +24,7 @@ void* lw6gfx_backend_s::gfx_context
         
 @end defcv
 
-@defcv {member} lw6gfx_backend_s {argc}
+@defcv {member} {lw6gfx_backend_s} {argc}
 @example
 int lw6gfx_backend_s::argc
 @end example
@@ -32,7 +33,7 @@ int lw6gfx_backend_s::argc
         
 @end defcv
 
-@defcv {member} lw6gfx_backend_s {argv}
+@defcv {member} {lw6gfx_backend_s} {argv}
 @example
 const char** lw6gfx_backend_s::argv
 @end example
@@ -41,7 +42,7 @@ const char** lw6gfx_backend_s::argv
         
 @end defcv
 
-@defcv {member} lw6gfx_backend_s {id}
+@defcv {member} {lw6gfx_backend_s} {id}
 @example
 u_int32_t lw6gfx_backend_s::id
 @end example
@@ -50,7 +51,7 @@ u_int32_t lw6gfx_backend_s::id
         
 @end defcv
 
-@defcv {member} lw6gfx_backend_s {init}
+@defcv {member} {lw6gfx_backend_s} {init}
 @example
 void*(* lw6gfx_backend_s::init)(int argc, const char *argv[], lw6gui_video_mode_t *video_mode, lw6gui_resize_callback_func_t resize_callback)
 @end example
@@ -59,7 +60,7 @@ void*(* lw6gfx_backend_s::init)(int argc, const char *argv[], lw6gui_video_mode_
         
 @end defcv
 
-@defcv {member} lw6gfx_backend_s {quit}
+@defcv {member} {lw6gfx_backend_s} {quit}
 @example
 void(* lw6gfx_backend_s::quit)(void *gfx_context)
 @end example
@@ -68,7 +69,7 @@ void(* lw6gfx_backend_s::quit)(void *gfx_context)
         
 @end defcv
 
-@defcv {member} lw6gfx_backend_s {repr}
+@defcv {member} {lw6gfx_backend_s} {repr}
 @example
 char*(* lw6gfx_backend_s::repr)(void *gfx_context, u_int32_t id)
 @end example
@@ -77,7 +78,7 @@ char*(* lw6gfx_backend_s::repr)(void *gfx_context, u_int32_t id)
         
 @end defcv
 
-@defcv {member} lw6gfx_backend_s {set_video_mode}
+@defcv {member} {lw6gfx_backend_s} {set_video_mode}
 @example
 int(* lw6gfx_backend_s::set_video_mode)(void *gfx_context, lw6gui_video_mode_t *video_mode)
 @end example
@@ -86,7 +87,7 @@ int(* lw6gfx_backend_s::set_video_mode)(void *gfx_context, lw6gui_video_mode_t *
         
 @end defcv
 
-@defcv {member} lw6gfx_backend_s {get_video_mode}
+@defcv {member} {lw6gfx_backend_s} {get_video_mode}
 @example
 int(* lw6gfx_backend_s::get_video_mode)(void *gfx_context, lw6gui_video_mode_t *video_mode)
 @end example
@@ -95,7 +96,7 @@ int(* lw6gfx_backend_s::get_video_mode)(void *gfx_context, lw6gui_video_mode_t *
         
 @end defcv
 
-@defcv {member} lw6gfx_backend_s {get_fullscreen_modes}
+@defcv {member} {lw6gfx_backend_s} {get_fullscreen_modes}
 @example
 int(* lw6gfx_backend_s::get_fullscreen_modes)(void *gfx_context, lw6gui_fullscreen_modes_t *modes)
 @end example
@@ -104,7 +105,7 @@ int(* lw6gfx_backend_s::get_fullscreen_modes)(void *gfx_context, lw6gui_fullscre
         
 @end defcv
 
-@defcv {member} lw6gfx_backend_s {pump_events}
+@defcv {member} {lw6gfx_backend_s} {pump_events}
 @example
 lw6gui_input_t*(* lw6gfx_backend_s::pump_events)(void *gfx_context)
 @end example
@@ -113,7 +114,7 @@ lw6gui_input_t*(* lw6gfx_backend_s::pump_events)(void *gfx_context)
         
 @end defcv
 
-@defcv {member} lw6gfx_backend_s {display}
+@defcv {member} {lw6gfx_backend_s} {display}
 @example
 int(* lw6gfx_backend_s::display)(void *gfx_context, int mask, lw6gui_look_t *look, lw6map_level_t *level, lw6ker_game_struct_t *game_struct, lw6ker_game_state_t *game_state, lw6pil_local_cursors_t *local_cursors, lw6gui_menu_t *menu, float progress, float fps, float mps, char **log_list, int capture, int gfx_debug, int debug_team_id, int debug_layer_id)
 @end example
