--- a/liquidwar6/doc/map-doxygen.texi
+++ b/liquidwar6/doc/map-doxygen.texi
@@ -1,11 +1,12 @@
 
   
-@deftp struct lw6map_body_s
+@deftp {Struct} {lw6map_body_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6map_body_s {checksum}
+@defcv {member} {lw6map_body_s} {checksum}
 @example
 int lw6map_body_s::checksum
 @end example
@@ -14,7 +15,7 @@ int lw6map_body_s::checksum
         
 @end defcv
 
-@defcv {member} lw6map_body_s {shape}
+@defcv {member} {lw6map_body_s} {shape}
 @example
 lw6sys_whd_t lw6map_body_s::shape
 @end example
@@ -23,7 +24,7 @@ lw6sys_whd_t lw6map_body_s::shape
         
 @end defcv
 
-@defcv {member} lw6map_body_s {layers}
+@defcv {member} {lw6map_body_s} {layers}
 @example
 lw6map_layer_t lw6map_body_s::layers[LW6MAP_MAX_BODY_DEPTH]
 @end example
@@ -32,7 +33,7 @@ lw6map_layer_t lw6map_body_s::layers[LW6MAP_MAX_BODY_DEPTH]
         
 @end defcv
 
-@defcv {member} lw6map_body_s {glue}
+@defcv {member} {lw6map_body_s} {glue}
 @example
 lw6map_meta_layer_t lw6map_body_s::glue
 @end example
@@ -41,7 +42,7 @@ lw6map_meta_layer_t lw6map_body_s::glue
         
 @end defcv
 
-@defcv {member} lw6map_body_s {boost}
+@defcv {member} {lw6map_body_s} {boost}
 @example
 lw6map_meta_layer_t lw6map_body_s::boost
 @end example
@@ -50,7 +51,7 @@ lw6map_meta_layer_t lw6map_body_s::boost
         
 @end defcv
 
-@defcv {member} lw6map_body_s {danger}
+@defcv {member} {lw6map_body_s} {danger}
 @example
 lw6map_meta_layer_t lw6map_body_s::danger
 @end example
@@ -59,7 +60,7 @@ lw6map_meta_layer_t lw6map_body_s::danger
         
 @end defcv
 
-@defcv {member} lw6map_body_s {medicine}
+@defcv {member} {lw6map_body_s} {medicine}
 @example
 lw6map_meta_layer_t lw6map_body_s::medicine
 @end example
@@ -68,7 +69,7 @@ lw6map_meta_layer_t lw6map_body_s::medicine
         
 @end defcv
 
-@defcv {member} lw6map_body_s {one_way_north}
+@defcv {member} {lw6map_body_s} {one_way_north}
 @example
 lw6map_meta_layer_t lw6map_body_s::one_way_north
 @end example
@@ -77,7 +78,7 @@ lw6map_meta_layer_t lw6map_body_s::one_way_north
         
 @end defcv
 
-@defcv {member} lw6map_body_s {one_way_east}
+@defcv {member} {lw6map_body_s} {one_way_east}
 @example
 lw6map_meta_layer_t lw6map_body_s::one_way_east
 @end example
@@ -86,7 +87,7 @@ lw6map_meta_layer_t lw6map_body_s::one_way_east
         
 @end defcv
 
-@defcv {member} lw6map_body_s {one_way_south}
+@defcv {member} {lw6map_body_s} {one_way_south}
 @example
 lw6map_meta_layer_t lw6map_body_s::one_way_south
 @end example
@@ -95,7 +96,7 @@ lw6map_meta_layer_t lw6map_body_s::one_way_south
         
 @end defcv
 
-@defcv {member} lw6map_body_s {one_way_west}
+@defcv {member} {lw6map_body_s} {one_way_west}
 @example
 lw6map_meta_layer_t lw6map_body_s::one_way_west
 @end example
@@ -107,12 +108,13 @@ lw6map_meta_layer_t lw6map_body_s::one_way_west
 
 
   
-@deftp struct lw6map_bot_info_s
+@deftp {Struct} {lw6map_bot_info_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6map_bot_info_s {color}
+@defcv {member} {lw6map_bot_info_s} {color}
 @example
 int lw6map_bot_info_s::color
 @end example
@@ -121,7 +123,7 @@ int lw6map_bot_info_s::color
         
 @end defcv
 
-@defcv {member} lw6map_bot_info_s {ai}
+@defcv {member} {lw6map_bot_info_s} {ai}
 @example
 char* lw6map_bot_info_s::ai
 @end example
@@ -133,12 +135,13 @@ char* lw6map_bot_info_s::ai
 
 
   
-@deftp struct lw6map_color_couple_s
+@deftp {Struct} {lw6map_color_couple_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6map_color_couple_s {fg}
+@defcv {member} {lw6map_color_couple_s} {fg}
 @example
 lw6sys_color_8_t lw6map_color_couple_s::fg
 @end example
@@ -147,7 +150,7 @@ lw6sys_color_8_t lw6map_color_couple_s::fg
         
 @end defcv
 
-@defcv {member} lw6map_color_couple_s {bg}
+@defcv {member} {lw6map_color_couple_s} {bg}
 @example
 lw6sys_color_8_t lw6map_color_couple_s::bg
 @end example
@@ -159,12 +162,13 @@ lw6sys_color_8_t lw6map_color_couple_s::bg
 
 
   
-@deftp struct lw6map_color_set_s
+@deftp {Struct} {lw6map_color_set_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6map_color_set_s {color_base}
+@defcv {member} {lw6map_color_set_s} {color_base}
 @example
 lw6map_color_couple_t lw6map_color_set_s::color_base
 @end example
@@ -173,7 +177,7 @@ lw6map_color_couple_t lw6map_color_set_s::color_base
         
 @end defcv
 
-@defcv {member} lw6map_color_set_s {color_alternate}
+@defcv {member} {lw6map_color_set_s} {color_alternate}
 @example
 lw6map_color_couple_t lw6map_color_set_s::color_alternate
 @end example
@@ -182,7 +186,7 @@ lw6map_color_couple_t lw6map_color_set_s::color_alternate
         
 @end defcv
 
-@defcv {member} lw6map_color_set_s {background_color_root}
+@defcv {member} {lw6map_color_set_s} {background_color_root}
 @example
 lw6map_color_couple_t lw6map_color_set_s::background_color_root
 @end example
@@ -191,7 +195,7 @@ lw6map_color_couple_t lw6map_color_set_s::background_color_root
         
 @end defcv
 
-@defcv {member} lw6map_color_set_s {background_color_stuff}
+@defcv {member} {lw6map_color_set_s} {background_color_stuff}
 @example
 lw6map_color_couple_t lw6map_color_set_s::background_color_stuff
 @end example
@@ -200,7 +204,7 @@ lw6map_color_couple_t lw6map_color_set_s::background_color_stuff
         
 @end defcv
 
-@defcv {member} lw6map_color_set_s {hud_color_frame}
+@defcv {member} {lw6map_color_set_s} {hud_color_frame}
 @example
 lw6map_color_couple_t lw6map_color_set_s::hud_color_frame
 @end example
@@ -209,7 +213,7 @@ lw6map_color_couple_t lw6map_color_set_s::hud_color_frame
         
 @end defcv
 
-@defcv {member} lw6map_color_set_s {hud_color_text}
+@defcv {member} {lw6map_color_set_s} {hud_color_text}
 @example
 lw6map_color_couple_t lw6map_color_set_s::hud_color_text
 @end example
@@ -218,7 +222,7 @@ lw6map_color_couple_t lw6map_color_set_s::hud_color_text
         
 @end defcv
 
-@defcv {member} lw6map_color_set_s {menu_color_default}
+@defcv {member} {lw6map_color_set_s} {menu_color_default}
 @example
 lw6map_color_couple_t lw6map_color_set_s::menu_color_default
 @end example
@@ -227,7 +231,7 @@ lw6map_color_couple_t lw6map_color_set_s::menu_color_default
         
 @end defcv
 
-@defcv {member} lw6map_color_set_s {menu_color_selected}
+@defcv {member} {lw6map_color_set_s} {menu_color_selected}
 @example
 lw6map_color_couple_t lw6map_color_set_s::menu_color_selected
 @end example
@@ -236,7 +240,7 @@ lw6map_color_couple_t lw6map_color_set_s::menu_color_selected
         
 @end defcv
 
-@defcv {member} lw6map_color_set_s {menu_color_disabled}
+@defcv {member} {lw6map_color_set_s} {menu_color_disabled}
 @example
 lw6map_color_couple_t lw6map_color_set_s::menu_color_disabled
 @end example
@@ -245,7 +249,7 @@ lw6map_color_couple_t lw6map_color_set_s::menu_color_disabled
         
 @end defcv
 
-@defcv {member} lw6map_color_set_s {view_color_cursor}
+@defcv {member} {lw6map_color_set_s} {view_color_cursor}
 @example
 lw6map_color_couple_t lw6map_color_set_s::view_color_cursor
 @end example
@@ -254,7 +258,7 @@ lw6map_color_couple_t lw6map_color_set_s::view_color_cursor
         
 @end defcv
 
-@defcv {member} lw6map_color_set_s {view_color_map}
+@defcv {member} {lw6map_color_set_s} {view_color_map}
 @example
 lw6map_color_couple_t lw6map_color_set_s::view_color_map
 @end example
@@ -263,7 +267,7 @@ lw6map_color_couple_t lw6map_color_set_s::view_color_map
         
 @end defcv
 
-@defcv {member} lw6map_color_set_s {system_color}
+@defcv {member} {lw6map_color_set_s} {system_color}
 @example
 lw6map_color_couple_t lw6map_color_set_s::system_color
 @end example
@@ -272,7 +276,7 @@ lw6map_color_couple_t lw6map_color_set_s::system_color
         
 @end defcv
 
-@defcv {member} lw6map_color_set_s {team_color_dead}
+@defcv {member} {lw6map_color_set_s} {team_color_dead}
 @example
 lw6sys_color_8_t lw6map_color_set_s::team_color_dead
 @end example
@@ -281,7 +285,7 @@ lw6sys_color_8_t lw6map_color_set_s::team_color_dead
         
 @end defcv
 
-@defcv {member} lw6map_color_set_s {team_colors}
+@defcv {member} {lw6map_color_set_s} {team_colors}
 @example
 lw6sys_color_8_t lw6map_color_set_s::team_colors[LW6MAP_NB_TEAM_COLORS]
 @end example
@@ -293,12 +297,13 @@ lw6sys_color_8_t lw6map_color_set_s::team_colors[LW6MAP_NB_TEAM_COLORS]
 
 
   
-@deftp struct lw6map_cursor_texture_layer_s
+@deftp {Struct} {lw6map_cursor_texture_layer_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6map_cursor_texture_layer_s {data}
+@defcv {member} {lw6map_cursor_texture_layer_s} {data}
 @example
 lw6sys_color_8_t lw6map_cursor_texture_layer_s::data[LW6MAP_CURSOR_TEXTURE_SIZE][LW6MAP_CURSOR_TEXTURE_SIZE]
 @end example
@@ -310,12 +315,13 @@ lw6sys_color_8_t lw6map_cursor_texture_layer_s::data[LW6MAP_CURSOR_TEXTURE_SIZE]
 
 
   
-@deftp struct lw6map_cursor_texture_s
+@deftp {Struct} {lw6map_cursor_texture_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6map_cursor_texture_s {fg_bg_layer}
+@defcv {member} {lw6map_cursor_texture_s} {fg_bg_layer}
 @example
 lw6map_cursor_texture_layer_t lw6map_cursor_texture_s::fg_bg_layer
 @end example
@@ -324,7 +330,7 @@ lw6map_cursor_texture_layer_t lw6map_cursor_texture_s::fg_bg_layer
         
 @end defcv
 
-@defcv {member} lw6map_cursor_texture_s {color_layer}
+@defcv {member} {lw6map_cursor_texture_s} {color_layer}
 @example
 lw6map_cursor_texture_layer_t lw6map_cursor_texture_s::color_layer
 @end example
@@ -336,12 +342,13 @@ lw6map_cursor_texture_layer_t lw6map_cursor_texture_s::color_layer
 
 
   
-@deftp struct lw6map_layer_s
+@deftp {Struct} {lw6map_layer_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6map_layer_s {shape}
+@defcv {member} {lw6map_layer_s} {shape}
 @example
 lw6sys_whd_t lw6map_layer_s::shape
 @end example
@@ -350,7 +357,7 @@ lw6sys_whd_t lw6map_layer_s::shape
         
 @end defcv
 
-@defcv {member} lw6map_layer_s {data}
+@defcv {member} {lw6map_layer_s} {data}
 @example
 u_int8_t* lw6map_layer_s::data
 @end example
@@ -362,12 +369,13 @@ u_int8_t* lw6map_layer_s::data
 
 
   
-@deftp struct lw6map_level_s
+@deftp {Struct} {lw6map_level_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6map_level_s {id}
+@defcv {member} {lw6map_level_s} {id}
 @example
 u_int32_t lw6map_level_s::id
 @end example
@@ -376,7 +384,7 @@ u_int32_t lw6map_level_s::id
         
 @end defcv
 
-@defcv {member} lw6map_level_s {metadata}
+@defcv {member} {lw6map_level_s} {metadata}
 @example
 lw6map_metadata_t lw6map_level_s::metadata
 @end example
@@ -385,7 +393,7 @@ lw6map_metadata_t lw6map_level_s::metadata
         
 @end defcv
 
-@defcv {member} lw6map_level_s {local_info}
+@defcv {member} {lw6map_level_s} {local_info}
 @example
 lw6map_local_info_t lw6map_level_s::local_info
 @end example
@@ -394,7 +402,7 @@ lw6map_local_info_t lw6map_level_s::local_info
         
 @end defcv
 
-@defcv {member} lw6map_level_s {body}
+@defcv {member} {lw6map_level_s} {body}
 @example
 lw6map_body_t lw6map_level_s::body
 @end example
@@ -403,7 +411,7 @@ lw6map_body_t lw6map_level_s::body
         
 @end defcv
 
-@defcv {member} lw6map_level_s {texture}
+@defcv {member} {lw6map_level_s} {texture}
 @example
 lw6map_texture_t lw6map_level_s::texture
 @end example
@@ -412,7 +420,7 @@ lw6map_texture_t lw6map_level_s::texture
         
 @end defcv
 
-@defcv {member} lw6map_level_s {cursor_texture}
+@defcv {member} {lw6map_level_s} {cursor_texture}
 @example
 lw6map_cursor_texture_t lw6map_level_s::cursor_texture
 @end example
@@ -421,7 +429,7 @@ lw6map_cursor_texture_t lw6map_level_s::cursor_texture
         
 @end defcv
 
-@defcv {member} lw6map_level_s {param}
+@defcv {member} {lw6map_level_s} {param}
 @example
 lw6map_param_t lw6map_level_s::param
 @end example
@@ -433,12 +441,13 @@ lw6map_param_t lw6map_level_s::param
 
 
   
-@deftp struct lw6map_local_info_s
+@deftp {Struct} {lw6map_local_info_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6map_local_info_s {music_dir}
+@defcv {member} {lw6map_local_info_s} {music_dir}
 @example
 char* lw6map_local_info_s::music_dir
 @end example
@@ -450,12 +459,13 @@ char* lw6map_local_info_s::music_dir
 
 
   
-@deftp struct lw6map_metadata_s
+@deftp {Struct} {lw6map_metadata_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6map_metadata_s {title}
+@defcv {member} {lw6map_metadata_s} {title}
 @example
 char* lw6map_metadata_s::title
 @end example
@@ -464,7 +474,7 @@ char* lw6map_metadata_s::title
         
 @end defcv
 
-@defcv {member} lw6map_metadata_s {author}
+@defcv {member} {lw6map_metadata_s} {author}
 @example
 char* lw6map_metadata_s::author
 @end example
@@ -473,7 +483,7 @@ char* lw6map_metadata_s::author
         
 @end defcv
 
-@defcv {member} lw6map_metadata_s {description}
+@defcv {member} {lw6map_metadata_s} {description}
 @example
 char* lw6map_metadata_s::description
 @end example
@@ -482,7 +492,7 @@ char* lw6map_metadata_s::description
         
 @end defcv
 
-@defcv {member} lw6map_metadata_s {license}
+@defcv {member} {lw6map_metadata_s} {license}
 @example
 char* lw6map_metadata_s::license
 @end example
@@ -491,7 +501,7 @@ char* lw6map_metadata_s::license
         
 @end defcv
 
-@defcv {member} lw6map_metadata_s {vanilla_exp}
+@defcv {member} {lw6map_metadata_s} {vanilla_exp}
 @example
 int lw6map_metadata_s::vanilla_exp
 @end example
@@ -503,12 +513,13 @@ int lw6map_metadata_s::vanilla_exp
 
 
   
-@deftp struct lw6map_meta_layer_s
+@deftp {Struct} {lw6map_meta_layer_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6map_meta_layer_s {shape}
+@defcv {member} {lw6map_meta_layer_s} {shape}
 @example
 lw6sys_whd_t lw6map_meta_layer_s::shape
 @end example
@@ -517,7 +528,7 @@ lw6sys_whd_t lw6map_meta_layer_s::shape
         
 @end defcv
 
-@defcv {member} lw6map_meta_layer_s {data}
+@defcv {member} {lw6map_meta_layer_s} {data}
 @example
 u_int8_t* lw6map_meta_layer_s::data
 @end example
@@ -529,12 +540,13 @@ u_int8_t* lw6map_meta_layer_s::data
 
 
   
-@deftp struct lw6map_param_s
+@deftp {Struct} {lw6map_param_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6map_param_s {rules}
+@defcv {member} {lw6map_param_s} {rules}
 @example
 lw6map_rules_t lw6map_param_s::rules
 @end example
@@ -543,7 +555,7 @@ lw6map_rules_t lw6map_param_s::rules
         
 @end defcv
 
-@defcv {member} lw6map_param_s {style}
+@defcv {member} {lw6map_param_s} {style}
 @example
 lw6map_style_t lw6map_param_s::style
 @end example
@@ -552,7 +564,7 @@ lw6map_style_t lw6map_param_s::style
         
 @end defcv
 
-@defcv {member} lw6map_param_s {teams}
+@defcv {member} {lw6map_param_s} {teams}
 @example
 lw6map_teams_t lw6map_param_s::teams
 @end example
@@ -564,12 +576,13 @@ lw6map_teams_t lw6map_param_s::teams
 
 
   
-@deftp struct lw6map_rules_s
+@deftp {Struct} {lw6map_rules_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6map_rules_s {total_time}
+@defcv {member} {lw6map_rules_s} {total_time}
 @example
 int32_t lw6map_rules_s::total_time
 @end example
@@ -578,7 +591,7 @@ int32_t lw6map_rules_s::total_time
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {respawn_team}
+@defcv {member} {lw6map_rules_s} {respawn_team}
 @example
 int32_t lw6map_rules_s::respawn_team
 @end example
@@ -587,7 +600,7 @@ int32_t lw6map_rules_s::respawn_team
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {respawn_position_mode}
+@defcv {member} {lw6map_rules_s} {respawn_position_mode}
 @example
 int32_t lw6map_rules_s::respawn_position_mode
 @end example
@@ -596,7 +609,7 @@ int32_t lw6map_rules_s::respawn_position_mode
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {respawn_delay}
+@defcv {member} {lw6map_rules_s} {respawn_delay}
 @example
 int32_t lw6map_rules_s::respawn_delay
 @end example
@@ -605,7 +618,7 @@ int32_t lw6map_rules_s::respawn_delay
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {moves_per_round}
+@defcv {member} {lw6map_rules_s} {moves_per_round}
 @example
 int32_t lw6map_rules_s::moves_per_round
 @end example
@@ -614,7 +627,7 @@ int32_t lw6map_rules_s::moves_per_round
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {spreads_per_round}
+@defcv {member} {lw6map_rules_s} {spreads_per_round}
 @example
 int32_t lw6map_rules_s::spreads_per_round
 @end example
@@ -623,7 +636,7 @@ int32_t lw6map_rules_s::spreads_per_round
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {rounds_per_sec}
+@defcv {member} {lw6map_rules_s} {rounds_per_sec}
 @example
 int32_t lw6map_rules_s::rounds_per_sec
 @end example
@@ -632,7 +645,7 @@ int32_t lw6map_rules_s::rounds_per_sec
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {fighter_attack}
+@defcv {member} {lw6map_rules_s} {fighter_attack}
 @example
 int32_t lw6map_rules_s::fighter_attack
 @end example
@@ -641,7 +654,7 @@ int32_t lw6map_rules_s::fighter_attack
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {fighter_defense}
+@defcv {member} {lw6map_rules_s} {fighter_defense}
 @example
 int32_t lw6map_rules_s::fighter_defense
 @end example
@@ -650,7 +663,7 @@ int32_t lw6map_rules_s::fighter_defense
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {fighter_new_health}
+@defcv {member} {lw6map_rules_s} {fighter_new_health}
 @example
 int32_t lw6map_rules_s::fighter_new_health
 @end example
@@ -659,7 +672,7 @@ int32_t lw6map_rules_s::fighter_new_health
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {fighter_regenerate}
+@defcv {member} {lw6map_rules_s} {fighter_regenerate}
 @example
 int32_t lw6map_rules_s::fighter_regenerate
 @end example
@@ -668,7 +681,7 @@ int32_t lw6map_rules_s::fighter_regenerate
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {side_attack_factor}
+@defcv {member} {lw6map_rules_s} {side_attack_factor}
 @example
 int32_t lw6map_rules_s::side_attack_factor
 @end example
@@ -677,7 +690,7 @@ int32_t lw6map_rules_s::side_attack_factor
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {side_defense_factor}
+@defcv {member} {lw6map_rules_s} {side_defense_factor}
 @example
 int32_t lw6map_rules_s::side_defense_factor
 @end example
@@ -686,7 +699,7 @@ int32_t lw6map_rules_s::side_defense_factor
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {nb_move_tries}
+@defcv {member} {lw6map_rules_s} {nb_move_tries}
 @example
 int32_t lw6map_rules_s::nb_move_tries
 @end example
@@ -695,7 +708,7 @@ int32_t lw6map_rules_s::nb_move_tries
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {nb_attack_tries}
+@defcv {member} {lw6map_rules_s} {nb_attack_tries}
 @example
 int32_t lw6map_rules_s::nb_attack_tries
 @end example
@@ -704,7 +717,7 @@ int32_t lw6map_rules_s::nb_attack_tries
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {nb_defense_tries}
+@defcv {member} {lw6map_rules_s} {nb_defense_tries}
 @example
 int32_t lw6map_rules_s::nb_defense_tries
 @end example
@@ -713,7 +726,7 @@ int32_t lw6map_rules_s::nb_defense_tries
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {vertical_move}
+@defcv {member} {lw6map_rules_s} {vertical_move}
 @example
 int32_t lw6map_rules_s::vertical_move
 @end example
@@ -722,7 +735,7 @@ int32_t lw6map_rules_s::vertical_move
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {spread_mode}
+@defcv {member} {lw6map_rules_s} {spread_mode}
 @example
 int32_t lw6map_rules_s::spread_mode
 @end example
@@ -731,7 +744,7 @@ int32_t lw6map_rules_s::spread_mode
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {single_army_size}
+@defcv {member} {lw6map_rules_s} {single_army_size}
 @example
 int32_t lw6map_rules_s::single_army_size
 @end example
@@ -740,7 +753,7 @@ int32_t lw6map_rules_s::single_army_size
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {total_armies_size}
+@defcv {member} {lw6map_rules_s} {total_armies_size}
 @example
 int32_t lw6map_rules_s::total_armies_size
 @end example
@@ -749,7 +762,7 @@ int32_t lw6map_rules_s::total_armies_size
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {max_nb_teams}
+@defcv {member} {lw6map_rules_s} {max_nb_teams}
 @example
 int32_t lw6map_rules_s::max_nb_teams
 @end example
@@ -758,7 +771,7 @@ int32_t lw6map_rules_s::max_nb_teams
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {max_nb_cursors}
+@defcv {member} {lw6map_rules_s} {max_nb_cursors}
 @example
 int32_t lw6map_rules_s::max_nb_cursors
 @end example
@@ -767,7 +780,7 @@ int32_t lw6map_rules_s::max_nb_cursors
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {max_nb_nodes}
+@defcv {member} {lw6map_rules_s} {max_nb_nodes}
 @example
 int32_t lw6map_rules_s::max_nb_nodes
 @end example
@@ -776,7 +789,7 @@ int32_t lw6map_rules_s::max_nb_nodes
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {exp}
+@defcv {member} {lw6map_rules_s} {exp}
 @example
 int32_t lw6map_rules_s::exp
 @end example
@@ -785,7 +798,7 @@ int32_t lw6map_rules_s::exp
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {highest_team_color_allowed}
+@defcv {member} {lw6map_rules_s} {highest_team_color_allowed}
 @example
 int32_t lw6map_rules_s::highest_team_color_allowed
 @end example
@@ -794,7 +807,7 @@ int32_t lw6map_rules_s::highest_team_color_allowed
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {highest_weapon_allowed}
+@defcv {member} {lw6map_rules_s} {highest_weapon_allowed}
 @example
 int32_t lw6map_rules_s::highest_weapon_allowed
 @end example
@@ -803,7 +816,7 @@ int32_t lw6map_rules_s::highest_weapon_allowed
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {x_polarity}
+@defcv {member} {lw6map_rules_s} {x_polarity}
 @example
 int32_t lw6map_rules_s::x_polarity
 @end example
@@ -812,7 +825,7 @@ int32_t lw6map_rules_s::x_polarity
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {y_polarity}
+@defcv {member} {lw6map_rules_s} {y_polarity}
 @example
 int32_t lw6map_rules_s::y_polarity
 @end example
@@ -821,7 +834,7 @@ int32_t lw6map_rules_s::y_polarity
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {z_polarity}
+@defcv {member} {lw6map_rules_s} {z_polarity}
 @example
 int32_t lw6map_rules_s::z_polarity
 @end example
@@ -830,7 +843,7 @@ int32_t lw6map_rules_s::z_polarity
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {max_zone_size}
+@defcv {member} {lw6map_rules_s} {max_zone_size}
 @example
 int32_t lw6map_rules_s::max_zone_size
 @end example
@@ -839,7 +852,7 @@ int32_t lw6map_rules_s::max_zone_size
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {round_delta}
+@defcv {member} {lw6map_rules_s} {round_delta}
 @example
 int32_t lw6map_rules_s::round_delta
 @end example
@@ -848,7 +861,7 @@ int32_t lw6map_rules_s::round_delta
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {max_round_delta}
+@defcv {member} {lw6map_rules_s} {max_round_delta}
 @example
 int32_t lw6map_rules_s::max_round_delta
 @end example
@@ -857,7 +870,7 @@ int32_t lw6map_rules_s::max_round_delta
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {max_cursor_pot}
+@defcv {member} {lw6map_rules_s} {max_cursor_pot}
 @example
 int32_t lw6map_rules_s::max_cursor_pot
 @end example
@@ -866,7 +879,7 @@ int32_t lw6map_rules_s::max_cursor_pot
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {cursor_pot_init}
+@defcv {member} {lw6map_rules_s} {cursor_pot_init}
 @example
 int32_t lw6map_rules_s::cursor_pot_init
 @end example
@@ -875,7 +888,7 @@ int32_t lw6map_rules_s::cursor_pot_init
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {max_cursor_pot_offset}
+@defcv {member} {lw6map_rules_s} {max_cursor_pot_offset}
 @example
 int32_t lw6map_rules_s::max_cursor_pot_offset
 @end example
@@ -884,7 +897,7 @@ int32_t lw6map_rules_s::max_cursor_pot_offset
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {start_x}
+@defcv {member} {lw6map_rules_s} {start_x}
 @example
 int32_t lw6map_rules_s::start_x[LW6MAP_MAX_NB_TEAMS]
 @end example
@@ -893,7 +906,7 @@ int32_t lw6map_rules_s::start_x[LW6MAP_MAX_NB_TEAMS]
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {start_y}
+@defcv {member} {lw6map_rules_s} {start_y}
 @example
 int32_t lw6map_rules_s::start_y[LW6MAP_MAX_NB_TEAMS]
 @end example
@@ -902,7 +915,7 @@ int32_t lw6map_rules_s::start_y[LW6MAP_MAX_NB_TEAMS]
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {start_position_mode}
+@defcv {member} {lw6map_rules_s} {start_position_mode}
 @example
 int32_t lw6map_rules_s::start_position_mode
 @end example
@@ -911,7 +924,7 @@ int32_t lw6map_rules_s::start_position_mode
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {color_conflict_mode}
+@defcv {member} {lw6map_rules_s} {color_conflict_mode}
 @example
 int32_t lw6map_rules_s::color_conflict_mode
 @end example
@@ -920,7 +933,7 @@ int32_t lw6map_rules_s::color_conflict_mode
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {spread_thread}
+@defcv {member} {lw6map_rules_s} {spread_thread}
 @example
 int32_t lw6map_rules_s::spread_thread
 @end example
@@ -929,7 +942,7 @@ int32_t lw6map_rules_s::spread_thread
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {glue_power}
+@defcv {member} {lw6map_rules_s} {glue_power}
 @example
 int32_t lw6map_rules_s::glue_power
 @end example
@@ -938,7 +951,7 @@ int32_t lw6map_rules_s::glue_power
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {boost_power}
+@defcv {member} {lw6map_rules_s} {boost_power}
 @example
 int32_t lw6map_rules_s::boost_power
 @end example
@@ -947,7 +960,7 @@ int32_t lw6map_rules_s::boost_power
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {danger_power}
+@defcv {member} {lw6map_rules_s} {danger_power}
 @example
 int32_t lw6map_rules_s::danger_power
 @end example
@@ -956,7 +969,7 @@ int32_t lw6map_rules_s::danger_power
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {medicine_power}
+@defcv {member} {lw6map_rules_s} {medicine_power}
 @example
 int32_t lw6map_rules_s::medicine_power
 @end example
@@ -965,7 +978,7 @@ int32_t lw6map_rules_s::medicine_power
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {frags_mode}
+@defcv {member} {lw6map_rules_s} {frags_mode}
 @example
 int32_t lw6map_rules_s::frags_mode
 @end example
@@ -974,7 +987,7 @@ int32_t lw6map_rules_s::frags_mode
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {frags_to_distribute}
+@defcv {member} {lw6map_rules_s} {frags_to_distribute}
 @example
 int32_t lw6map_rules_s::frags_to_distribute
 @end example
@@ -983,7 +996,7 @@ int32_t lw6map_rules_s::frags_to_distribute
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {frags_fade_out}
+@defcv {member} {lw6map_rules_s} {frags_fade_out}
 @example
 int32_t lw6map_rules_s::frags_fade_out
 @end example
@@ -992,7 +1005,7 @@ int32_t lw6map_rules_s::frags_fade_out
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {use_team_profiles}
+@defcv {member} {lw6map_rules_s} {use_team_profiles}
 @example
 int32_t lw6map_rules_s::use_team_profiles
 @end example
@@ -1001,7 +1014,7 @@ int32_t lw6map_rules_s::use_team_profiles
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {team_profile_aggressive}
+@defcv {member} {lw6map_rules_s} {team_profile_aggressive}
 @example
 int32_t lw6map_rules_s::team_profile_aggressive[LW6MAP_MAX_NB_TEAMS]
 @end example
@@ -1010,7 +1023,7 @@ int32_t lw6map_rules_s::team_profile_aggressive[LW6MAP_MAX_NB_TEAMS]
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {team_profile_vulnerable}
+@defcv {member} {lw6map_rules_s} {team_profile_vulnerable}
 @example
 int32_t lw6map_rules_s::team_profile_vulnerable[LW6MAP_MAX_NB_TEAMS]
 @end example
@@ -1019,7 +1032,7 @@ int32_t lw6map_rules_s::team_profile_vulnerable[LW6MAP_MAX_NB_TEAMS]
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {team_profile_mobile}
+@defcv {member} {lw6map_rules_s} {team_profile_mobile}
 @example
 int32_t lw6map_rules_s::team_profile_mobile[LW6MAP_MAX_NB_TEAMS]
 @end example
@@ -1028,7 +1041,7 @@ int32_t lw6map_rules_s::team_profile_mobile[LW6MAP_MAX_NB_TEAMS]
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {team_profile_fast}
+@defcv {member} {lw6map_rules_s} {team_profile_fast}
 @example
 int32_t lw6map_rules_s::team_profile_fast[LW6MAP_MAX_NB_TEAMS]
 @end example
@@ -1037,7 +1050,7 @@ int32_t lw6map_rules_s::team_profile_fast[LW6MAP_MAX_NB_TEAMS]
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {team_profile_weapon_id}
+@defcv {member} {lw6map_rules_s} {team_profile_weapon_id}
 @example
 int32_t lw6map_rules_s::team_profile_weapon_id[LW6MAP_MAX_NB_TEAMS]
 @end example
@@ -1046,7 +1059,7 @@ int32_t lw6map_rules_s::team_profile_weapon_id[LW6MAP_MAX_NB_TEAMS]
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {team_profile_weapon_alternate_id}
+@defcv {member} {lw6map_rules_s} {team_profile_weapon_alternate_id}
 @example
 int32_t lw6map_rules_s::team_profile_weapon_alternate_id[LW6MAP_MAX_NB_TEAMS]
 @end example
@@ -1055,7 +1068,7 @@ int32_t lw6map_rules_s::team_profile_weapon_alternate_id[LW6MAP_MAX_NB_TEAMS]
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {team_profile_weapon_mode}
+@defcv {member} {lw6map_rules_s} {team_profile_weapon_mode}
 @example
 int32_t lw6map_rules_s::team_profile_weapon_mode[LW6MAP_MAX_NB_TEAMS]
 @end example
@@ -1064,7 +1077,7 @@ int32_t lw6map_rules_s::team_profile_weapon_mode[LW6MAP_MAX_NB_TEAMS]
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {weapon_duration}
+@defcv {member} {lw6map_rules_s} {weapon_duration}
 @example
 int32_t lw6map_rules_s::weapon_duration
 @end example
@@ -1073,7 +1086,7 @@ int32_t lw6map_rules_s::weapon_duration
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {weapon_charge_delay}
+@defcv {member} {lw6map_rules_s} {weapon_charge_delay}
 @example
 int32_t lw6map_rules_s::weapon_charge_delay
 @end example
@@ -1082,7 +1095,7 @@ int32_t lw6map_rules_s::weapon_charge_delay
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {weapon_charge_max}
+@defcv {member} {lw6map_rules_s} {weapon_charge_max}
 @example
 int32_t lw6map_rules_s::weapon_charge_max
 @end example
@@ -1091,7 +1104,7 @@ int32_t lw6map_rules_s::weapon_charge_max
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {weapon_tune_berzerk_power}
+@defcv {member} {lw6map_rules_s} {weapon_tune_berzerk_power}
 @example
 int32_t lw6map_rules_s::weapon_tune_berzerk_power
 @end example
@@ -1100,7 +1113,7 @@ int32_t lw6map_rules_s::weapon_tune_berzerk_power
         
 @end defcv
 
-@defcv {member} lw6map_rules_s {weapon_tune_turbo_power}
+@defcv {member} {lw6map_rules_s} {weapon_tune_turbo_power}
 @example
 int32_t lw6map_rules_s::weapon_tune_turbo_power
 @end example
@@ -1112,12 +1125,13 @@ int32_t lw6map_rules_s::weapon_tune_turbo_power
 
 
   
-@deftp struct lw6map_style_s
+@deftp {Struct} {lw6map_style_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6map_style_s {keep_ratio}
+@defcv {member} {lw6map_style_s} {keep_ratio}
 @example
 int lw6map_style_s::keep_ratio
 @end example
@@ -1126,7 +1140,7 @@ int lw6map_style_s::keep_ratio
         
 @end defcv
 
-@defcv {member} lw6map_style_s {zoom}
+@defcv {member} {lw6map_style_s} {zoom}
 @example
 float lw6map_style_s::zoom
 @end example
@@ -1135,7 +1149,7 @@ float lw6map_style_s::zoom
         
 @end defcv
 
-@defcv {member} lw6map_style_s {zoom_min}
+@defcv {member} {lw6map_style_s} {zoom_min}
 @example
 float lw6map_style_s::zoom_min
 @end example
@@ -1144,7 +1158,7 @@ float lw6map_style_s::zoom_min
         
 @end defcv
 
-@defcv {member} lw6map_style_s {zoom_max}
+@defcv {member} {lw6map_style_s} {zoom_max}
 @example
 float lw6map_style_s::zoom_max
 @end example
@@ -1153,7 +1167,7 @@ float lw6map_style_s::zoom_max
         
 @end defcv
 
-@defcv {member} lw6map_style_s {x_wrap}
+@defcv {member} {lw6map_style_s} {x_wrap}
 @example
 int lw6map_style_s::x_wrap
 @end example
@@ -1162,7 +1176,7 @@ int lw6map_style_s::x_wrap
         
 @end defcv
 
-@defcv {member} lw6map_style_s {y_wrap}
+@defcv {member} {lw6map_style_s} {y_wrap}
 @example
 int lw6map_style_s::y_wrap
 @end example
@@ -1171,7 +1185,7 @@ int lw6map_style_s::y_wrap
         
 @end defcv
 
-@defcv {member} lw6map_style_s {background_style}
+@defcv {member} {lw6map_style_s} {background_style}
 @example
 char* lw6map_style_s::background_style
 @end example
@@ -1180,7 +1194,7 @@ char* lw6map_style_s::background_style
         
 @end defcv
 
-@defcv {member} lw6map_style_s {hud_style}
+@defcv {member} {lw6map_style_s} {hud_style}
 @example
 char* lw6map_style_s::hud_style
 @end example
@@ -1189,7 +1203,7 @@ char* lw6map_style_s::hud_style
         
 @end defcv
 
-@defcv {member} lw6map_style_s {menu_style}
+@defcv {member} {lw6map_style_s} {menu_style}
 @example
 char* lw6map_style_s::menu_style
 @end example
@@ -1198,7 +1212,7 @@ char* lw6map_style_s::menu_style
         
 @end defcv
 
-@defcv {member} lw6map_style_s {view_style}
+@defcv {member} {lw6map_style_s} {view_style}
 @example
 char* lw6map_style_s::view_style
 @end example
@@ -1207,7 +1221,7 @@ char* lw6map_style_s::view_style
         
 @end defcv
 
-@defcv {member} lw6map_style_s {animation_density}
+@defcv {member} {lw6map_style_s} {animation_density}
 @example
 float lw6map_style_s::animation_density
 @end example
@@ -1216,7 +1230,7 @@ float lw6map_style_s::animation_density
         
 @end defcv
 
-@defcv {member} lw6map_style_s {animation_speed}
+@defcv {member} {lw6map_style_s} {animation_speed}
 @example
 float lw6map_style_s::animation_speed
 @end example
@@ -1225,7 +1239,7 @@ float lw6map_style_s::animation_speed
         
 @end defcv
 
-@defcv {member} lw6map_style_s {cursor_size}
+@defcv {member} {lw6map_style_s} {cursor_size}
 @example
 float lw6map_style_s::cursor_size
 @end example
@@ -1234,7 +1248,7 @@ float lw6map_style_s::cursor_size
         
 @end defcv
 
-@defcv {member} lw6map_style_s {colorize_cursor}
+@defcv {member} {lw6map_style_s} {colorize_cursor}
 @example
 int lw6map_style_s::colorize_cursor
 @end example
@@ -1243,7 +1257,7 @@ int lw6map_style_s::colorize_cursor
         
 @end defcv
 
-@defcv {member} lw6map_style_s {blink_cursor}
+@defcv {member} {lw6map_style_s} {blink_cursor}
 @example
 int lw6map_style_s::blink_cursor
 @end example
@@ -1252,7 +1266,7 @@ int lw6map_style_s::blink_cursor
         
 @end defcv
 
-@defcv {member} lw6map_style_s {hidden_layer_alpha}
+@defcv {member} {lw6map_style_s} {hidden_layer_alpha}
 @example
 float lw6map_style_s::hidden_layer_alpha
 @end example
@@ -1261,7 +1275,7 @@ float lw6map_style_s::hidden_layer_alpha
         
 @end defcv
 
-@defcv {member} lw6map_style_s {colorize}
+@defcv {member} {lw6map_style_s} {colorize}
 @example
 int lw6map_style_s::colorize
 @end example
@@ -1270,7 +1284,7 @@ int lw6map_style_s::colorize
         
 @end defcv
 
-@defcv {member} lw6map_style_s {pixelize}
+@defcv {member} {lw6map_style_s} {pixelize}
 @example
 int lw6map_style_s::pixelize
 @end example
@@ -1279,7 +1293,7 @@ int lw6map_style_s::pixelize
         
 @end defcv
 
-@defcv {member} lw6map_style_s {color_set}
+@defcv {member} {lw6map_style_s} {color_set}
 @example
 lw6map_color_set_t lw6map_style_s::color_set
 @end example
@@ -1288,7 +1302,7 @@ lw6map_color_set_t lw6map_style_s::color_set
         
 @end defcv
 
-@defcv {member} lw6map_style_s {music_file}
+@defcv {member} {lw6map_style_s} {music_file}
 @example
 char* lw6map_style_s::music_file
 @end example
@@ -1297,7 +1311,7 @@ char* lw6map_style_s::music_file
         
 @end defcv
 
-@defcv {member} lw6map_style_s {music_filter}
+@defcv {member} {lw6map_style_s} {music_filter}
 @example
 char* lw6map_style_s::music_filter
 @end example
@@ -1306,7 +1320,7 @@ char* lw6map_style_s::music_filter
         
 @end defcv
 
-@defcv {member} lw6map_style_s {music_exclude}
+@defcv {member} {lw6map_style_s} {music_exclude}
 @example
 char* lw6map_style_s::music_exclude
 @end example
@@ -1315,7 +1329,7 @@ char* lw6map_style_s::music_exclude
         
 @end defcv
 
-@defcv {member} lw6map_style_s {waves}
+@defcv {member} {lw6map_style_s} {waves}
 @example
 int lw6map_style_s::waves
 @end example
@@ -1327,12 +1341,13 @@ int lw6map_style_s::waves
 
 
   
-@deftp struct lw6map_teams_s
+@deftp {Struct} {lw6map_teams_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6map_teams_s {player_color}
+@defcv {member} {lw6map_teams_s} {player_color}
 @example
 int lw6map_teams_s::player_color[LW6MAP_TEAMS_NB_PLAYERS]
 @end example
@@ -1341,7 +1356,7 @@ int lw6map_teams_s::player_color[LW6MAP_TEAMS_NB_PLAYERS]
         
 @end defcv
 
-@defcv {member} lw6map_teams_s {nb_bots}
+@defcv {member} {lw6map_teams_s} {nb_bots}
 @example
 int lw6map_teams_s::nb_bots
 @end example
@@ -1350,7 +1365,7 @@ int lw6map_teams_s::nb_bots
         
 @end defcv
 
-@defcv {member} lw6map_teams_s {bot_speed}
+@defcv {member} {lw6map_teams_s} {bot_speed}
 @example
 float lw6map_teams_s::bot_speed
 @end example
@@ -1359,7 +1374,7 @@ float lw6map_teams_s::bot_speed
         
 @end defcv
 
-@defcv {member} lw6map_teams_s {bot_iq}
+@defcv {member} {lw6map_teams_s} {bot_iq}
 @example
 int lw6map_teams_s::bot_iq
 @end example
@@ -1368,7 +1383,7 @@ int lw6map_teams_s::bot_iq
         
 @end defcv
 
-@defcv {member} lw6map_teams_s {bot}
+@defcv {member} {lw6map_teams_s} {bot}
 @example
 lw6map_bot_info_t lw6map_teams_s::bot[LW6MAP_TEAMS_MAX_NB_BOTS]
 @end example
@@ -1380,12 +1395,13 @@ lw6map_bot_info_t lw6map_teams_s::bot[LW6MAP_TEAMS_MAX_NB_BOTS]
 
 
   
-@deftp struct lw6map_texture_s
+@deftp {Struct} {lw6map_texture_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6map_texture_s {w}
+@defcv {member} {lw6map_texture_s} {w}
 @example
 int lw6map_texture_s::w
 @end example
@@ -1394,7 +1410,7 @@ int lw6map_texture_s::w
         
 @end defcv
 
-@defcv {member} lw6map_texture_s {h}
+@defcv {member} {lw6map_texture_s} {h}
 @example
 int lw6map_texture_s::h
 @end example
@@ -1403,7 +1419,7 @@ int lw6map_texture_s::h
         
 @end defcv
 
-@defcv {member} lw6map_texture_s {has_alpha}
+@defcv {member} {lw6map_texture_s} {has_alpha}
 @example
 int lw6map_texture_s::has_alpha
 @end example
@@ -1412,7 +1428,7 @@ int lw6map_texture_s::has_alpha
         
 @end defcv
 
-@defcv {member} lw6map_texture_s {data}
+@defcv {member} {lw6map_texture_s} {data}
 @example
 lw6sys_color_8_t* lw6map_texture_s::data
 @end example
@@ -1421,7 +1437,7 @@ lw6sys_color_8_t* lw6map_texture_s::data
         
 @end defcv
 
-@defcv {member} lw6map_texture_s {guessed_color_base}
+@defcv {member} {lw6map_texture_s} {guessed_color_base}
 @example
 lw6map_color_couple_t lw6map_texture_s::guessed_color_base
 @end example
@@ -1430,7 +1446,7 @@ lw6map_color_couple_t lw6map_texture_s::guessed_color_base
         
 @end defcv
 
-@defcv {member} lw6map_texture_s {guessed_color_alternate}
+@defcv {member} {lw6map_texture_s} {guessed_color_alternate}
 @example
 lw6map_color_couple_t lw6map_texture_s::guessed_color_alternate
 @end example
