--- a/liquidwar6/doc/nod-doxygen.texi
+++ b/liquidwar6/doc/nod-doxygen.texi
@@ -1,11 +1,12 @@
 
   
-@deftp struct lw6nod_const_info_s
+@deftp {Struct} {lw6nod_const_info_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6nod_const_info_s {program}
+@defcv {member} {lw6nod_const_info_s} {program}
 @example
 char* lw6nod_const_info_s::program
 @end example
@@ -14,7 +15,7 @@ char* lw6nod_const_info_s::program
         
 @end defcv
 
-@defcv {member} lw6nod_const_info_s {version}
+@defcv {member} {lw6nod_const_info_s} {version}
 @example
 char* lw6nod_const_info_s::version
 @end example
@@ -23,7 +24,7 @@ char* lw6nod_const_info_s::version
         
 @end defcv
 
-@defcv {member} lw6nod_const_info_s {codename}
+@defcv {member} {lw6nod_const_info_s} {codename}
 @example
 char* lw6nod_const_info_s::codename
 @end example
@@ -32,7 +33,7 @@ char* lw6nod_const_info_s::codename
         
 @end defcv
 
-@defcv {member} lw6nod_const_info_s {stamp}
+@defcv {member} {lw6nod_const_info_s} {stamp}
 @example
 int lw6nod_const_info_s::stamp
 @end example
@@ -41,7 +42,7 @@ int lw6nod_const_info_s::stamp
         
 @end defcv
 
-@defcv {member} lw6nod_const_info_s {id_int}
+@defcv {member} {lw6nod_const_info_s} {id_int}
 @example
 u_int64_t lw6nod_const_info_s::id_int
 @end example
@@ -50,7 +51,7 @@ u_int64_t lw6nod_const_info_s::id_int
         
 @end defcv
 
-@defcv {member} lw6nod_const_info_s {id_str}
+@defcv {member} {lw6nod_const_info_s} {id_str}
 @example
 char* lw6nod_const_info_s::id_str
 @end example
@@ -59,7 +60,7 @@ char* lw6nod_const_info_s::id_str
         
 @end defcv
 
-@defcv {member} lw6nod_const_info_s {url}
+@defcv {member} {lw6nod_const_info_s} {url}
 @example
 char* lw6nod_const_info_s::url
 @end example
@@ -68,7 +69,7 @@ char* lw6nod_const_info_s::url
         
 @end defcv
 
-@defcv {member} lw6nod_const_info_s {title}
+@defcv {member} {lw6nod_const_info_s} {title}
 @example
 char* lw6nod_const_info_s::title
 @end example
@@ -77,7 +78,7 @@ char* lw6nod_const_info_s::title
         
 @end defcv
 
-@defcv {member} lw6nod_const_info_s {description}
+@defcv {member} {lw6nod_const_info_s} {description}
 @example
 char* lw6nod_const_info_s::description
 @end example
@@ -86,7 +87,7 @@ char* lw6nod_const_info_s::description
         
 @end defcv
 
-@defcv {member} lw6nod_const_info_s {has_password}
+@defcv {member} {lw6nod_const_info_s} {has_password}
 @example
 int lw6nod_const_info_s::has_password
 @end example
@@ -95,7 +96,7 @@ int lw6nod_const_info_s::has_password
         
 @end defcv
 
-@defcv {member} lw6nod_const_info_s {password}
+@defcv {member} {lw6nod_const_info_s} {password}
 @example
 char* lw6nod_const_info_s::password
 @end example
@@ -104,7 +105,7 @@ char* lw6nod_const_info_s::password
         
 @end defcv
 
-@defcv {member} lw6nod_const_info_s {bench}
+@defcv {member} {lw6nod_const_info_s} {bench}
 @example
 int lw6nod_const_info_s::bench
 @end example
@@ -113,7 +114,7 @@ int lw6nod_const_info_s::bench
         
 @end defcv
 
-@defcv {member} lw6nod_const_info_s {open_relay}
+@defcv {member} {lw6nod_const_info_s} {open_relay}
 @example
 int lw6nod_const_info_s::open_relay
 @end example
@@ -122,7 +123,7 @@ int lw6nod_const_info_s::open_relay
         
 @end defcv
 
-@defcv {member} lw6nod_const_info_s {creation_timestamp}
+@defcv {member} {lw6nod_const_info_s} {creation_timestamp}
 @example
 int64_t lw6nod_const_info_s::creation_timestamp
 @end example
@@ -131,7 +132,7 @@ int64_t lw6nod_const_info_s::creation_timestamp
         
 @end defcv
 
-@defcv {member} lw6nod_const_info_s {idle_screenshot_size}
+@defcv {member} {lw6nod_const_info_s} {idle_screenshot_size}
 @example
 int lw6nod_const_info_s::idle_screenshot_size
 @end example
@@ -140,7 +141,7 @@ int lw6nod_const_info_s::idle_screenshot_size
         
 @end defcv
 
-@defcv {member} lw6nod_const_info_s {idle_screenshot_data}
+@defcv {member} {lw6nod_const_info_s} {idle_screenshot_data}
 @example
 void* lw6nod_const_info_s::idle_screenshot_data
 @end example
@@ -152,12 +153,13 @@ void* lw6nod_const_info_s::idle_screenshot_data
 
 
   
-@deftp struct lw6nod_dyn_info_s
+@deftp {Struct} {lw6nod_dyn_info_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6nod_dyn_info_s {community_id_int}
+@defcv {member} {lw6nod_dyn_info_s} {community_id_int}
 @example
 u_int64_t lw6nod_dyn_info_s::community_id_int
 @end example
@@ -166,7 +168,7 @@ u_int64_t lw6nod_dyn_info_s::community_id_int
         
 @end defcv
 
-@defcv {member} lw6nod_dyn_info_s {community_id_str}
+@defcv {member} {lw6nod_dyn_info_s} {community_id_str}
 @example
 char* lw6nod_dyn_info_s::community_id_str
 @end example
@@ -175,7 +177,7 @@ char* lw6nod_dyn_info_s::community_id_str
         
 @end defcv
 
-@defcv {member} lw6nod_dyn_info_s {round}
+@defcv {member} {lw6nod_dyn_info_s} {round}
 @example
 int lw6nod_dyn_info_s::round
 @end example
@@ -184,7 +186,7 @@ int lw6nod_dyn_info_s::round
         
 @end defcv
 
-@defcv {member} lw6nod_dyn_info_s {level}
+@defcv {member} {lw6nod_dyn_info_s} {level}
 @example
 char* lw6nod_dyn_info_s::level
 @end example
@@ -193,7 +195,7 @@ char* lw6nod_dyn_info_s::level
         
 @end defcv
 
-@defcv {member} lw6nod_dyn_info_s {required_bench}
+@defcv {member} {lw6nod_dyn_info_s} {required_bench}
 @example
 int lw6nod_dyn_info_s::required_bench
 @end example
@@ -202,7 +204,7 @@ int lw6nod_dyn_info_s::required_bench
         
 @end defcv
 
-@defcv {member} lw6nod_dyn_info_s {nb_colors}
+@defcv {member} {lw6nod_dyn_info_s} {nb_colors}
 @example
 int lw6nod_dyn_info_s::nb_colors
 @end example
@@ -211,7 +213,7 @@ int lw6nod_dyn_info_s::nb_colors
         
 @end defcv
 
-@defcv {member} lw6nod_dyn_info_s {max_nb_colors}
+@defcv {member} {lw6nod_dyn_info_s} {max_nb_colors}
 @example
 int lw6nod_dyn_info_s::max_nb_colors
 @end example
@@ -220,7 +222,7 @@ int lw6nod_dyn_info_s::max_nb_colors
         
 @end defcv
 
-@defcv {member} lw6nod_dyn_info_s {nb_cursors}
+@defcv {member} {lw6nod_dyn_info_s} {nb_cursors}
 @example
 int lw6nod_dyn_info_s::nb_cursors
 @end example
@@ -229,7 +231,7 @@ int lw6nod_dyn_info_s::nb_cursors
         
 @end defcv
 
-@defcv {member} lw6nod_dyn_info_s {max_nb_cursors}
+@defcv {member} {lw6nod_dyn_info_s} {max_nb_cursors}
 @example
 int lw6nod_dyn_info_s::max_nb_cursors
 @end example
@@ -238,7 +240,7 @@ int lw6nod_dyn_info_s::max_nb_cursors
         
 @end defcv
 
-@defcv {member} lw6nod_dyn_info_s {nb_nodes}
+@defcv {member} {lw6nod_dyn_info_s} {nb_nodes}
 @example
 int lw6nod_dyn_info_s::nb_nodes
 @end example
@@ -247,7 +249,7 @@ int lw6nod_dyn_info_s::nb_nodes
         
 @end defcv
 
-@defcv {member} lw6nod_dyn_info_s {max_nb_nodes}
+@defcv {member} {lw6nod_dyn_info_s} {max_nb_nodes}
 @example
 int lw6nod_dyn_info_s::max_nb_nodes
 @end example
@@ -256,7 +258,7 @@ int lw6nod_dyn_info_s::max_nb_nodes
         
 @end defcv
 
-@defcv {member} lw6nod_dyn_info_s {game_screenshot_size}
+@defcv {member} {lw6nod_dyn_info_s} {game_screenshot_size}
 @example
 int lw6nod_dyn_info_s::game_screenshot_size
 @end example
@@ -265,7 +267,7 @@ int lw6nod_dyn_info_s::game_screenshot_size
         
 @end defcv
 
-@defcv {member} lw6nod_dyn_info_s {game_screenshot_data}
+@defcv {member} {lw6nod_dyn_info_s} {game_screenshot_data}
 @example
 void* lw6nod_dyn_info_s::game_screenshot_data
 @end example
@@ -277,12 +279,13 @@ void* lw6nod_dyn_info_s::game_screenshot_data
 
 
   
-@deftp struct lw6nod_info_s
+@deftp {Struct} {lw6nod_info_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6nod_info_s {mutex}
+@defcv {member} {lw6nod_info_s} {mutex}
 @example
 void* lw6nod_info_s::mutex
 @end example
@@ -291,7 +294,7 @@ void* lw6nod_info_s::mutex
         
 @end defcv
 
-@defcv {member} lw6nod_info_s {const_info}
+@defcv {member} {lw6nod_info_s} {const_info}
 @example
 lw6nod_const_info_t lw6nod_info_s::const_info
 @end example
@@ -300,7 +303,7 @@ lw6nod_const_info_t lw6nod_info_s::const_info
         
 @end defcv
 
-@defcv {member} lw6nod_info_s {dyn_info}
+@defcv {member} {lw6nod_info_s} {dyn_info}
 @example
 lw6nod_dyn_info_t lw6nod_info_s::dyn_info
 @end example
@@ -309,7 +312,7 @@ lw6nod_dyn_info_t lw6nod_info_s::dyn_info
         
 @end defcv
 
-@defcv {member} lw6nod_info_s {discovered_nodes}
+@defcv {member} {lw6nod_info_s} {discovered_nodes}
 @example
 lw6sys_hash_t* lw6nod_info_s::discovered_nodes
 @end example
@@ -318,7 +321,7 @@ lw6sys_hash_t* lw6nod_info_s::discovered_nodes
         
 @end defcv
 
-@defcv {member} lw6nod_info_s {verified_nodes}
+@defcv {member} {lw6nod_info_s} {verified_nodes}
 @example
 lw6sys_list_t* lw6nod_info_s::verified_nodes
 @end example
