--- a/liquidwar6/doc/tsk-doxygen.texi
+++ b/liquidwar6/doc/tsk-doxygen.texi
@@ -1,11 +1,12 @@
 
   
-@deftp struct lw6tsk_loader_s
+@deftp {Struct} {lw6tsk_loader_s}
+
     
     
 @end deftp
 
-@defcv {member} lw6tsk_loader_s {id}
+@defcv {member} {lw6tsk_loader_s} {id}
 @example
 u_int32_t lw6tsk_loader_s::id
 @end example
@@ -14,7 +15,7 @@ u_int32_t lw6tsk_loader_s::id
         
 @end defcv
 
-@defcv {member} lw6tsk_loader_s {thread}
+@defcv {member} {lw6tsk_loader_s} {thread}
 @example
 void* lw6tsk_loader_s::thread
 @end example
@@ -23,7 +24,7 @@ void* lw6tsk_loader_s::thread
         
 @end defcv
 
-@defcv {member} lw6tsk_loader_s {data}
+@defcv {member} {lw6tsk_loader_s} {data}
 @example
 void* lw6tsk_loader_s::data
 @end example
